# EurekaClaw

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  README_zh.md  UPDATES.md  install.sh  install_win.ps1  pyproject.toml  resources.txt  sync-from-main.sh
docs/: README.md  UI.md  agents.md  architecture.md  changelog.md  cli.md  configuration.md  memory.md  skills.md  token-limits.md  tools.md  ui-install.md  user-guide.md
eurekaclaw/: __init__.py  ccproxy_manager.py  cli.py  config.py  main.py  onboard.py  utils.py
eurekaclaw/agents/: __init__.py  base.py  session.py
eurekaclaw/domains/: __init__.py  base.py
eurekaclaw/eurekatemplate/: eureka.cls  main.tex  smile.sty
eurekaclaw/evaluation/: __init__.py  evaluator.py
eurekaclaw/knowledge_bus/: __init__.py  bus.py
eurekaclaw/lean/: __init__.py  instruction_generator.py  lean_code_generator.py
eurekaclaw/learning/: __init__.py  failure_capture.py  loop.py  memory_extractor.py  prm_scorer.py  tool_pattern_extractor.py
eurekaclaw/llm/: __init__.py  anthropic_adapter.py  base.py  factory.py  openai_compat.py  openai_responses.py
eurekaclaw/memory/: __init__.py  episodic.py  knowledge_graph.py  manager.py  persistent.py
eurekaclaw/orchestrator/: __init__.py  gate.py  meta_orchestrator.py  paper_qa_handler.py  pipeline.py  planner.py  (+1 more)
frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
lean-gen/: LeanGen.lean  lake-manifest.json  lakefile.lean
scripts/: generate_lean_from_instruction.py  generate_lean_instruction.py  generate_lean_pipeline.py  install-ui.sh
tests/: conftest.py  test_gates.py
(+219 files in other folders)
