[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eurekaclaw"
version = "0.1.0"
description = "Multi-agent system for theoretical research — proof-heavy, formalism-rich, math-dense domains"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EurekaClaw Contributors" }]

dependencies = [
    "anthropic>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "networkx>=3.3",
    "click>=8.0",
    "python-frontmatter>=1.1",
    "sentence-transformers>=3.0",
    "docker>=7.0",
    "bibtexparser",
    "rich>=13.0",
    "tenacity>=8.0",
    "aiofiles>=23.0",
    "numpy>=1.26",
    "arxiv>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "mypy>=1.10"]
# Required for LLM_BACKEND=openai_compat (OpenRouter, vLLM, SGLang, LM Studio…)
openai = ["openai>=1.30"]
# Required for ANTHROPIC_AUTH_MODE=oauth (Claude Pro/Max via Claude Code's OAuth tokens)
oauth = ["ccproxy-api>=0.2.4"]
lean4 = []  # Lean4 must be installed separately: https://leanprover.github.io/lean4/doc/setup.html
coq = []    # Coq must be installed separately: https://coq.inria.fr/download

[project.scripts]
eurekaclaw = "eurekaclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["eurekaclaw"]
artifacts = ["eurekaclaw/ui/static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
